# threadmap

./: .env.example  .gitignore  DEPLOY.md  MVP.md  README.md  context.md  plan.md  pyproject.toml  render.yaml  requirements.txt  ui-plan.md
examples/: sample_conversation.md
prompts/: mindmap_instruction.md
server/: Dockerfile  README.md  main.py  requirements.txt  stream.py  test_main.py
server/fixtures/: sample-trajectory.sse
tests/: test_cli.py  test_extract_unit.py  test_ingest.py  test_models.py  test_render.py
threadmap/: cli.py  config.py  extract.py  ingest.py  models.py  render.py
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/extract/: route.ts
web/components/: Downloads.tsx  InputPane.tsx  KeyField.tsx  MindMapPane.tsx  StepCard.tsx  TrajectoryPane.tsx
web/lib/: costs.ts  defaults.ts  parseConversation.ts  renderers.ts  sse.ts  storage.ts  types.ts
