[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threadmap"
version = "0.1.0"
description = "Turn one Claude conversation into a navigable mind map via DSPy RLM."
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.1.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.scripts]
threadmap = "threadmap.cli:main"

[tool.setuptools.packages.find]
include = ["threadmap*"]
